fix: fixed scripts for build

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.ts",
   "type": "module",
   "scripts": {
-    "compile": "tsc",
-    "start": "npm run compile && node ./dist/app.js"
+    "build": "tsc",
+    "start": "node ./dist/app.js"
   },
   "keywords": [],
   "author": "",
