--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.17",
     "@types/graphql": "^14.5.0",
     "@types/node": "^18.13.0",
+    "dotenv": "^16.0.3",
     "typescript": "^4.9.5"
   }
 }
