--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@apollo/server": "^4.3.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
-    "serverless-http": "^3.1.1"
+    "serverless-http": "^3.1.1",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
