--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/app.js"
+    "start": "node ./dist/app.js",
+    "dev": "npm run build && node -r dotenv/config ./dist/app.js"
   },
   "keywords": [],
   "author": "",
