--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.3.3",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "graphql": "^16.6.0",
-    "serverless-http": "^3.1.1",
-    "dotenv": "^16.0.3"
+    "graphql": "^16.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.17",
     "@types/graphql": "^14.5.0",
     "@types/node": "^18.13.0",
